@@ -16,5 +16,6 @@ $Id$
 """
 
 from zope.testing.doctest import *
+from zope.testing.doctest import _normalize_module
 from functional import *
 
